# api/models/basket.go
@@ -2,7 +2,6 @@ package models
 
 type Basket struct {
 	ID         string `json:"id"`
-	ProductID  string `json:"product_id"`
 	CustomerID string `json:"customer_id"`
 	TotalSum   int    `json:"total_sum"`
 	Quantity   int    `json:"quantity"`
@@ -12,7 +11,6 @@ type Basket struct {
 }
 
 type CreateBasket struct {
-	ProductID  string `json:"product_id"`
 	CustomerID string `json:"customer_id"`
 	TotalSum   int    `json:"total_sum"`
 	Quantity   int    `json:"quantity"`
@@ -20,7 +18,6 @@ type CreateBasket struct {
 
 type UpdateBasket struct {
 	ID         string `json:"-"`
-	ProductID  string `json:"product_id"`
 	CustomerID string `json:"customer_id"`
 	TotalSum   int    `json:"total_sum"`
 	Quantity   int    `json:"quantity"`
